--- a/summary/sections/main.tex
+++ b/summary/sections/main.tex
@@ -1,8 +1,6 @@
 \section{Multivariate Analysis of \lcs}
 Apart from the actual results in the form of conditional lower bounds for \lcs{}, it also offers a general approach on how to tackle multivariate fine-grained complexity analysis.
-This part will present the general steps to take by using the analysis of \lcs{} as an example.
-
-A general methodology for proving multivariate fine-grained complexity can be split into the following three steps:
+In general this task can be split into the following three steps:
 \begin{enumerate}
 	\item Define Parameters
 	\item Find Parameter Relations
@@ -11,7 +9,7 @@ A general methodology for proving multivariate fine-grained complexity can be sp
 Step one has the goal to properly scope the analysis by specifying the interesting parameters.
 The second step then bounds the parameter space by showing which parameter combinations are actually valid and non-trivial.
 The last step is then to find reductions that span the full parameter space.
-Each of the steps will be explained in more detail in the following.
+Each of the steps will be explained with the example of LCS in more detail in the following.
 \todo{Give outline}
 
 \input{sections/main_part/1_define_parameters}
