--- a/summary/sections/introduction.tex
+++ b/summary/sections/introduction.tex
@@ -13,6 +13,9 @@ This motivates a multivariate fine-grained complexity analysis of LCS where the 
 In the following we will use the notation $\numSymbols{\sigma}{x}$ for the number of occurrences of the symbol $\sigma$ in the string $x$.
 
 
+\subsection{Main Results}
+
+
 \subsection{Related Work}
 
 \autoref{tab:related_work} shows an overview of the related work on multivariate LCS.
